--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/backendgram
+spring.datasource.url=jdbc:mysql://localhost:3306/B08IPv4
 spring.datasource.username=root
-spring.datasource.password=as774360sd!
+spring.datasource.password=wo331846!!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
